# autobright

./: .clang-format  .gitignore  README.md  gcovr.cfg  meson.build  meson_options.txt  release.sh
.github/workflows/: main.yml
data/desktop/: autobright.desktop.in  meson.build
data/schemas/: fragoi.autobright.gschema.xml  meson.build
data/services/: com.github.fragoi.Autobright.xml  meson.build  xxd.sh
data/systemd/: fragoi-autobright.service  meson.build
debian/: build-deb.sh.in  changelog  compile-schemas.sh.in  control  control.in  meson.build
debugui/: app.js  dbusProxyUtils.js  debugWindow.js  global.d.ts  jsconfig.json
src/: adapter.cpp  adapter.h  autobright-service.cpp  autobright-service.h  autobright.cpp  autobright.h  brightness.cpp  brightness.h  closure.h  debug-info.h  filter.cpp  filter.h  gdbus.cpp  gdbus.h  gsettings.cpp  gsettings.h  idle-aware.cpp  idle-aware.h  idle-monitor.cpp  idle-monitor.h  logger.cpp  logger.h  main.cpp  promise.h  retry.h  sensor.cpp  sensor.h  settings.cpp  settings.h  signals.h  splist.h
subprojects/dbus/: com.github.fragoi.Autobright.xml  meson.build
subprojects/dbus/interfaces/: com.github.fragoi.autobright.Debug.xml
test/: brightness_test.cpp  closure_test.cpp  forward_test.cpp  gboxed_ptr_test.cpp  gexception_test.cpp  gobject_ptr_test.cpp  idle_aware_test.cpp  idle_monitor_test.cpp  logger_test.cpp  promise_test.cpp  promisemm_test.cpp  retry_test.cpp  sensor_test.cpp  signals2_test.cpp  signals_test.cpp  splist_test.cpp
test/manual/: idle_aware_test.cpp  sensor_test.cpp
